--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <title>M Database</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="mainContainer">
-        <h1>// WARFRAME MOD DATABASE //</h1>
+        <div class="top">
+            <div class="h1">
+                <h1>// WARFRAME MOD DATABASE //</h1>
+            </div>
+            <div class="squares">
+                <div class="sqr1"></div>
+                <div class="sqr2"></div>
+                <div class="sqr3"></div>
+                <div class="sqr4"></div>
+                <div class="sqr5"></div>
+            </div>
+            <hr class="vertical">
+        </div>
+        <div class="horizantals">
+            <hr class="line1">
+            <hr class="line2">
+            <hr class="line3">
+            <hr class="line4">
+            <hr class="line5        ">
+        </div>
     </div>
 </body>
+
 </html>
