anims in top panel done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="pl">
-
 <head>
-    <title>M Database</title>
+    <title>MOD DATABASE</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
-
 <body>
     <div class="mainContainer">
         <div class="top">
@@ -14,11 +13,21 @@
                 <h1>// WARFRAME MOD DATABASE //</h1>
             </div>
             <div class="squares">
-                <div class="sqr1"></div>
-                <div class="sqr2"></div>
-                <div class="sqr3"></div>
-                <div class="sqr4"></div>
-                <div class="sqr5"></div>
+                <div class="sqr1">
+                    <p>BROWN</p>
+                </div>
+                <div class="sqr2">
+                    <p>SILVER</p>
+                </div>
+                <div class="sqr3">
+                    <p>GOLD</p>
+                </div>
+                <div class="sqr4">
+                    <p>SPECIAL</p>
+                </div>
+                <div class="sqr5">
+                    <p>RIVEN</p>
+                </div>
             </div>
             <hr class="vertical">
         </div>
@@ -27,9 +36,9 @@
             <hr class="line2">
             <hr class="line3">
             <hr class="line4">
-            <hr class="line5        ">
+            <hr class="line5">
         </div>
+        <div class="root"></div>
     </div>
 </body>
-
 </html>
