--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
 <body>
     <div class="mainContainer">
         <div class="top">
-            <div class="h1">
+            <div class="h1" onclick="empty()">
                 <h1>// WARFRAME MOD DATABASE //</h1>
             </div>
-            <div class="squares">
+            <div class="squares" id="squares">
                 <div class="sqr1">
-                    <p>MODS</p>
+                    <p class="paragraf">MODS</p>
                 </div>
                 <div class="sqr2">
-                    <p>ARCANES</p>
+                    <p class="paragraf">ARCANES</p>
                 </div>
                 <div class="sqr3">
-                    <p>ADD</p>
+                    <p class="paragraf">ADD</p>
                 </div>
                 <div class="sqr4">
-                    <p>BUILD</p>
+                    <p class="paragraf">BUILD</p>
                 </div>
                 <div class="sqr5" onclick="login()">
-                    <p>LOGIN</p>
+                    <p class="paragraf">LOGIN</p>
                 </div>
             </div>
             <hr class="vertical">
-            <div class="accInfo">
-
+            <div class="accInfo" id="pfpbox">
+                <p class="accPfp" id="pfp">?</p>
             </div>
         </div>
         <div class="horizantals">
