almost finished login

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <hr class="line6">
         </div>
         <div id="root">
-
+            <article>MOD DATABASE ver. 1.05</article>
         </div>
     </div>
     <script src="script.js"></script>
