--- a/index.html
+++ b/index.html
@@ -43,7 +43,20 @@
             <hr class="line6">
         </div>
         <div id="root">
-            <article>MOD DATABASE ver. 1.05</article>
+            <!-- <article>MOD DATABASE ver. 1.05</article> -->
+            <div class="modTypes">
+                <h2 class="modTypesDesc">MOD TYPES</h2>
+                <ul>
+                    <li>NORMAL BRONZE</li>
+                    <li>NORMAL SILVER</li>
+                    <li>NORMAL GOLD</li>
+                    <li>CORRUPTED</li>
+                    <li>COMPANION</li>
+                    <li>AUGMENT</li>
+                    <li></li>
+                    <li>PRIMED</li>
+                </ul>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
