reworked top menu

--- a/index.html
+++ b/index.html
@@ -43,7 +43,40 @@
             <hr class="line6">
         </div>
         <div id="root">
-            <article>MOD DATABASE ver. 1.05</article>
+            <!-- <article>MOD DATABASE ver. 1.05</article> -->
+            <!--<h3>STANDARD MODS</h3>
+            <ul>
+                <li>NORMAL MODS</li>
+                <li>FLAWED MODS</li>
+                <li>PRIMED MODS</li>
+                <li>UMBRA MODS</li>
+                <li>AMALGAM MODS</li>
+                <li>GALVANIZED MODS</li>
+                <li>ARCHON MODS</li>
+            </ul>
+            <h3>NONSTANDARD MODS</h3>
+            <ul>
+                <li>NIGHTMARE MODS</li>
+                <li>CORRUPTED MODS</li>
+                <li>CONDITIONAL MODS</li>
+                <li>AUGMENT MODS</li>
+                <li>RIVEN MODS</li>
+                <li>SET</li>
+            </ul>
+            <h3>SPECIAL SLOT MODS</h3>
+            <ul>
+                <li>AURA MODS</li>
+                <li>STANCE MODS</li>
+                <li>EXILUS MODS</li>
+                <li>PECULIAR MODS</li>
+            </ul>
+            <h3>UNIQUE MODS</h3>
+            <ul>
+                <li>PRECEPTS</li>
+                <li>PARAZON MODS</li>
+                <li>RAILJACK MODS</li>
+                <li>CONCLAVE MODS</li>
+            </ul> -->
         </div>
     </div>
     <script src="script.js"></script>
