--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <title>MOD DATABASE</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <style id="style"></style>
 </head>
+
 <body>
     <div class="mainContainer">
         <div class="top">
@@ -44,42 +46,52 @@
         </div>
         <div id="root">
             <!-- <article>MOD DATABASE ver. 1.05</article> -->
-<<<<<<< HEAD
-            <!--<h3>STANDARD MODS</h3>
-            <ul>
-                <li>NORMAL MODS</li>
-                <li>FLAWED MODS</li>
-                <li>PRIMED MODS</li>
-                <li>UMBRA MODS</li>
-                <li>AMALGAM MODS</li>
-                <li>GALVANIZED MODS</li>
-                <li>ARCHON MODS</li>
-            </ul>
-            <h3>NONSTANDARD MODS</h3>
-            <ul>
-                <li>NIGHTMARE MODS</li>
-                <li>CORRUPTED MODS</li>
-                <li>CONDITIONAL MODS</li>
-                <li>AUGMENT MODS</li>
-                <li>RIVEN MODS</li>
-                <li>SET</li>
-            </ul>
-            <h3>SPECIAL SLOT MODS</h3>
-            <ul>
-                <li>AURA MODS</li>
-                <li>STANCE MODS</li>
-                <li>EXILUS MODS</li>
-                <li>PECULIAR MODS</li>
-            </ul>
-            <h3>UNIQUE MODS</h3>
-            <ul>
-                <li>PRECEPTS</li>
-                <li>PARAZON MODS</li>
-                <li>RAILJACK MODS</li>
-                <li>CONCLAVE MODS</li>
-            </ul> -->
+            <div class="modSearchBox">
+                <div class="modList">
+                    <h3>STANDARD MODS</h3>
+                    <ul>
+                        <li>NORMAL MODS</li>
+                        <li>FLAWED MODS</li>
+                        <li>PRIMED MODS</li>
+                        <li>UMBRA MODS</li>
+                        <li>AMALGAM MODS</li>
+                        <li>GALVANIZED MODS</li>
+                        <li>ARCHON MODS</li>
+                    </ul>
+                    <h3>NONSTANDARD MODS</h3>
+                    <ul>
+                        <li>NIGHTMARE MODS</li>
+                        <li>CORRUPTED MODS</li>
+                        <li>CONDITIONAL MODS</li>
+                        <li>AUGMENT MODS</li>
+                        <li>RIVEN MODS</li>
+                        <li>SET</li>
+                    </ul>
+                    <h3>SPECIAL SLOT MODS</h3>
+                    <ul>
+                        <li>AURA MODS</li>
+                        <li>STANCE MODS</li>
+                        <li>EXILUS MODS</li>
+                        <li>PECULIAR MODS</li>
+                    </ul>
+                    <h3>UNIQUE MODS</h3>
+                    <ul>
+                        <li>PRECEPTS</li>
+                        <li>PARAZON MODS</li>
+                        <li>RAILJACK MODS</li>
+                        <li>CONCLAVE MODS</li>
+                    </ul>
+                </div>
+                <div class="modSearch">
+
+                </div>
+                <div class="modSearchResult">
+
+                </div>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
