--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
                 </div>
             </div>
         </div>
+        <div class="footerMain">
+            <hr class="footerLine">
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
