--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         </div>
         <div class="footerMain">
             <hr class="footerLine">
+            <h1 class="h1Footer">// MORE TO COME LATER //</h1>
         </div>
     </div>
     <script src="script.js"></script>
