--- a/index.html
+++ b/index.html
@@ -46,46 +46,24 @@
         </div>
         <div id="root">
             <!-- <article>MOD DATABASE ver. 1.05</article> -->
-            <div class="modSearchBox">
-                <div class="modList">
-                    <h3>STANDARD MODS</h3>
+            <div class="arcaneSearchBox">
+                <div class="arcaneList">
+                    <h3>ARCANE TYPES</h3>
                     <ul>
-                        <li>NORMAL MODS</li>
-                        <li>FLAWED MODS</li>
-                        <li>PRIMED MODS</li>
-                        <li>UMBRA MODS</li>
-                        <li>AMALGAM MODS</li>
-                        <li>GALVANIZED MODS</li>
-                        <li>ARCHON MODS</li>
+                        <li>WARFRAME</li>
+                        <li>PRIMARY</li>
+                        <li>SECONDARY</li>
+                        <li>OPERATOR</li>
+                        <li>AMP</li>
+                        <li>KITGUN</li>
+                        <li>ZAW</li>    
                     </ul>
-                    <h3>NONSTANDARD MODS</h3>
-                    <ul>
-                        <li>NIGHTMARE MODS</li>
-                        <li>CORRUPTED MODS</li>
-                        <li>CONDITIONAL MODS</li>
-                        <li>AUGMENT MODS</li>
-                        <li>RIVEN MODS</li>
-                        <li>SET</li>
-                    </ul>
-                    <h3>SPECIAL SLOT MODS</h3>
-                    <ul>
-                        <li>AURA MODS</li>
-                        <li>STANCE MODS</li>
-                        <li>EXILUS MODS</li>
-                        <li>PECULIAR MODS</li>
-                    </ul>
-                    <h3>UNIQUE MODS</h3>
-                    <ul>
-                        <li>PRECEPTS</li>
-                        <li>PARAZON MODS</li>
-                        <li>RAILJACK MODS</li>
-                        <li>CONCLAVE MODS</li>
-                    </ul>
+                    <form action="arcaneSearch.php">
+                        <input type="text" placeholder="NAME">
+                        <input type="text" placeholder="RANK">
+                </form>
                 </div>
-                <div class="modSearch">
-
-                </div>
-                <div class="modSearchResult">
+                <div class="arcaneSearchResult">
 
                 </div>
             </div>
